--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
         <div class="container">
             <section id="home">
                 <h2>Home</h2>
-                <p>Welcome to the homepage! Add some introductory content here.</p>
+                <p>Welcome to the homepage!</p>
             </section>
             <section id="about">
                 <h2>About</h2>
-                <p>Tell people about yourself or your business here.</p>
+                <p>Projects</p>
             </section>
             <section id="services">
                 <h2>Services</h2>
-                <p>Describe the services or products you offer here.</p>
+                <p>More stuff</p>
             </section>
             <section id="contact">
                 <h2>Contact</h2>
-                <p>Provide contact information or a contact form here.</p>
+                <p>My info</p>
             </section>
         </div>
     </main>
