--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         <div class="container">
             <h1>My ePortfolio</h1>
             <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#code-review">Code Review</a></li>
-                    <li><a href="#artifacts">Artifacts</a></li>
-                    <li><a href="#self-assessment">Self-Assessment</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
+                <p>
+                    <a href="#home" style="padding-left: 10px; padding-right: 20px;">Home</a>
+                    <a href="#code-review" style="padding-left: 10px; padding-right: 20px;">Code Review</a>
+                    <a href="#artifacts" style="padding-left: 10px; padding-right: 20px;">Artifacts</a>
+                    <a href="#self-assessment" style="padding-left: 10px; padding-right: 20px;">Self-Assessment</a>
+                    <a href="#contact" style="padding-left: 10px; padding-right: 20px;">Contact</a>
+                </p>
             </nav>
         </div>
     </header>
@@ -86,7 +86,7 @@
                     <h3>Artifact 1: Contact and Appointment Management System</h3>
                     <p>This project involved creating terminal applications for managing contacts, tasks, and appointments, and ensuring they were correctly tested.</p>
                     <a href="https://github.com/caiomauro/capstone/blob/main/zContact%20and%20Appointment%20Management%20System.zip" target="_blank">View CAMS</a>
-                    <a href="https://github.com/caiomauro/capstone/blob/main/Contact%20and%20Appointment%20Management%20System%20Narrative.docx" target="_blank">Narrative</a>
+                    <p><a href="https://github.com/caiomauro/capstone/blob/main/Contact%20and%20Appointment%20Management%20System%20Narrative.docx" target="_blank">Narrative</a></p>
                     <p><strong>Enhancement Summary:</strong> Integrate contacts, tasks, and appointments into a cohesive system with robust testing. Add features allowing contacts to schedule appointments with each other and track tasks within those appointments.</p>
                     <p><strong>Skills Demonstrated:</strong> Integration of complex systems, testing, local database usage, and system design.</p>
                 </div>
@@ -94,7 +94,7 @@
                     <h3>Artifact 2: Machine Learning Model, Treasure Hunter</h3>
                     <p>This model solves the treasure hunt game using advanced machine learning techniques.</p>
                     <a href="https://github.com/caiomauro/capstone/blob/main/zTreasureHunter.zip" target="_blank">View Treasure Hunter</a>
-                    <a href="https://github.com/caiomauro/capstone/blob/main/TreasureHunter%20Narrative.docx" target="_blank">Narrative</a>
+                    <p><a href="https://github.com/caiomauro/capstone/blob/main/TreasureHunter%20Narrative.docx" target="_blank">Narrative</a></p>
                     <p><strong>Enhancement Summary:</strong> Improve performance and documentation of the model. Enhance the show function for better clarity and add a Python CLI for parameter adjustments.</p>
                     <p><strong>Skills Demonstrated:</strong> Machine learning, performance optimization, documentation, user interface improvements.</p>
                 </div>
@@ -102,7 +102,7 @@
                     <h3>Artifact 3: PagePal with Admin Panel and User Sessions</h3>
                     <p>Local database for a mobile app project, focusing on efficient data storage and retrieval.</p>
                     <a href="https://github.com/caiomauro/capstone/blob/main/zPagePal%2C%20Admin%20Panel%20and%20User%20Sessions.zip" target="_blank">View PagePal</a>
-                    <a href="https://github.com/caiomauro/capstone/blob/main/PagePal%20Narrative.docx" target="_blank">Narrative</a>
+                    <p><a href="https://github.com/caiomauro/capstone/blob/main/PagePal%20Narrative.docx" target="_blank">Narrative</a></p>
                     <p><strong>Enhancement Summary:</strong> Enhance data handling, add a permission system for admin accounts, and implement a database dump feature.</p>
                     <p><strong>Skills Demonstrated:</strong> Database management, data efficiency, access control, industry best practices.</p>
                 </div>
@@ -113,8 +113,8 @@
             </section>
             <section id="contact">
                 <h2>Contact</h2>
-                <p>If you would like to get in touch, please reach out via email or social media.</p>
-                <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+                <p>If you would like to get in touch, please reach out via LinkedIn</p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/caiomauro/">Me</a></p>
                 <!-- Add social media links if desired -->
             </section>
         </div>
