--- a/index.html
+++ b/index.html
@@ -29,8 +29,22 @@
             width: 80%;
             margin: 0 auto;
         }
-        h1, h2, h3 {
-            color: #333;
+        h2 {
+            color: #ff7c7c;
+            font-size: 2em;
+            font-weight: bold;
+            margin: 20px 0;
+            text-decoration: underline;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+        }
+        h3 {
+            color: #09005e;
+            font-size: 1em;
+            margin-left: 20px 0;
+        }
+        h1 {
+            color: #ffffff;
         }
         a {
             color: #1e90ff;
@@ -57,7 +71,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>My ePortfolio</h1>
+            <h1>Caio Mauro's ePortfolio</h1>
             <nav>
                 <p>
                     <a href="#home" style="padding-left: 10px; padding-right: 20px;">Home</a>
@@ -67,6 +81,9 @@
                     <a href="#contact" style="padding-left: 10px; padding-right: 20px;">Contact</a>
                 </p>
             </nav>
+            <img src="Icon_PL_Merit_Aug_2022-04.png"></img>
+            <img src="Icon_DL_Merit_Aug_2022.png"></img>
+            <img src="Icon_HR_Merit_Aug_2022-05.png"></img>
         </div>
     </header>
     <main>
@@ -74,6 +91,13 @@
             <section id="home">
                 <h2>Home</h2>
                 <p>Welcome to my professional ePortfolio. Here, you can explore my projects, view my code review, and read my self-assessment.</p>
+            </section>
+            <section id="self-assessment">
+                <h2>Professional Self-Assessment</h2>
+                <p>I started my journey in Computer Science in January 2022 with a passion for fixing computers and the general world of technology. This came after I had already done two years of a Political Science major. When I first started, my focus was on catching up with those around me who seemed to know so much more. I remember the first day I used leetcode and attempted to solve the legendary “Two Sum” problem. I used pen and paper to sketch out an algorithm that involved the lesser efficient nested loop solution. The rush I felt when solving it was extraordinary. I spent the next 2 weeks, which happened to be a vacation, running through a “25 Python Practice Problems”, trying to learn all that I could. This set the passion in me for all things programming.</p>
+                <p>Over the past couple years, my experience and knowledge have grown significantly. I have taken it upon myself to grow outside of my education. I’ve spent hundreds of hours creating my own mini projects that will never see the light of day outside of my external drive. Through all of this work and dedication I've developed a sense for quality code, detail and a strong security mindset, which are all essential in software engineering. My approach to coding has become more organized and planned out, with an emphasis on breaking down projects into smaller sections and conducting many rounds of testing on each component.
+                </p>
+                <p>Now, with the knowledge I've gained, I'm inspired to take my passion to the next level. My vision has expanded beyond just building programs—I want to start my own tech company that brings innovation to the forefront. I’m driven to create solutions that not only work but also push the boundaries of what's possible in the tech world.</p>
             </section>
             <section id="code-review">
                 <h2>Code Review</h2>
@@ -87,6 +111,7 @@
                     <p>This project involved creating terminal applications for managing contacts, tasks, and appointments, and ensuring they were correctly tested.</p>
                     <a href="https://github.com/caiomauro/capstone/blob/main/zContact%20and%20Appointment%20Management%20System.zip" target="_blank">View CAMS</a>
                     <p><a href="https://github.com/caiomauro/capstone/blob/main/Contact%20and%20Appointment%20Management%20System%20Narrative.docx" target="_blank">Narrative</a></p>
+                    <img src="mgmtsys.png"></img>
                     <p><strong>Enhancement Summary:</strong> Integrate contacts, tasks, and appointments into a cohesive system with robust testing. Add features allowing contacts to schedule appointments with each other and track tasks within those appointments.</p>
                     <p><strong>Skills Demonstrated:</strong> Integration of complex systems, testing, local database usage, and system design.</p>
                 </div>
@@ -95,6 +120,7 @@
                     <p>This model solves the treasure hunt game using advanced machine learning techniques.</p>
                     <a href="https://github.com/caiomauro/capstone/blob/main/zTreasureHunter.zip" target="_blank">View Treasure Hunter</a>
                     <p><a href="https://github.com/caiomauro/capstone/blob/main/TreasureHunter%20Narrative.docx" target="_blank">Narrative</a></p>
+                    <img src="enhancement_2_menu.png"></img>
                     <p><strong>Enhancement Summary:</strong> Improve performance and documentation of the model. Enhance the show function for better clarity and add a Python CLI for parameter adjustments.</p>
                     <p><strong>Skills Demonstrated:</strong> Machine learning, performance optimization, documentation, user interface improvements.</p>
                 </div>
@@ -107,14 +133,10 @@
                     <p><strong>Skills Demonstrated:</strong> Database management, data efficiency, access control, industry best practices.</p>
                 </div>
             </section>
-            <section id="self-assessment">
-                <h2>Professional Self-Assessment</h2>
-                <p>During my time in the Computer Science program, I have developed a range of skills and experiences that I believe will significantly contribute to my career in software and machine learning engineering. My self-assessment reflects my continuous learning and commitment to improving both my technical abilities and my understanding of complex technologies. I am confident that my ability to critically evaluate my own work and seek improvements demonstrates my readiness for professional challenges and opportunities.</p>
-            </section>
             <section id="contact">
                 <h2>Contact</h2>
                 <p>If you would like to get in touch, please reach out via LinkedIn</p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/caiomauro/">Me</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/caiomauro/" target="_blank">Me</a></p>
                 <!-- Add social media links if desired -->
             </section>
         </div>
